# tunicore

./: .gitignore  GNUmakefile  README.md  demo.html  limine.conf  run-demo.sh
kernel/: Cargo.toml  linker-x86_64.ld  rust-toolchain.toml
kernel/src/: agent.rs  alias.rs  analyzer_agent.wasm  audit.rs  cap_table.rs  channel.rs  chat_ui.rs  env.rs  framebuffer.rs  gdt.rs  greeter_agent.wasm  guardian.rs  hello_agent.wasm  hwdetect.rs  idt.rs  intent.rs  interrupts.rs  keyboard.rs  klog.rs  llm.rs  main.rs  receiver_agent.wasm  resource.rs  sender_agent.wasm  serial.rs  syscall.rs  virtfs.rs  wasm_runtime.rs  writer_agent.wasm
kernel/src/capability/: mod.rs  types.rs
kernel/src/memory/: allocator.rs  mod.rs  page_alloc.rs
tools/: llm_bridge.py
