[package]
name = "tunicore-kernel"
version = "0.1.0"
edition = "2024"
authors = ["TuniCore Contributors"]
description = "A capability-based AI-agent-first kernel written in Rust"

[dependencies]
limine = "0.6"
spin = "0.9"
linked_list_allocator = "0.10"
bitflags = "2"

[dependencies.wasmi]
version = "1.0"
default-features = false

[dependencies.x86_64]
version = "0.15"
default-features = false
features = ["instructions", "nightly"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
